--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div id="computer-opponent">click here to play against the computer</div>
     <div id="computer-turn"></div>
     <div id="restart-game"></div>
+    <div id="play-computer-again"></div>
     <div id="game-board"></div>
 </body>
 </html>
